Budget (#13)
* Make authentication optional

* Categorization based on similarity

* Fixes and dashboard APIs

* Upload pagination and minor fixes

* Fixes to budget APIs

* Budget refactoring

* Fix UUID v7